menu and widget style fixes, menu collapse added

--- a/editor-style.css
+++ b/editor-style.css
@@ -23,38 +23,33 @@ body {
 
 /* Headings */
 h1,h2,h3,h4,h5,h6 {
-	clear: both;
+	clear: none;
+	padding: .4em 0 .3em;	
 	margin: 0;
 }
 h1
 {
 	font-size: 2.0em;
-	padding: 0 0 .3em;
 }
 h2
 {
-	font-size: 1.8em;
-	padding: 0 0 .3em;
+	font-size: 1.6em;
 }
 h3
 {
-	font-size: 1.6em;
-	padding: 0 0 .3em;
+	font-size: 1.4em;
 }
 h4
 {
-	font-size: 1.4em;
-	padding: 0 0 .3em;
+	font-size: 1.3em;
 }
 h5
 {
-	font-size: 1.3em;
-	padding: 0 0 .3em;
+	font-size: 1.2em;
 }
 h6
 {
-	font-size: 1.2em;
-	padding: 0 0 .3em;
+	font-size: 1.1em;
 }
 hr {
 	background-color: #ccc;
